[package]
name = "todo-list"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0", features = ["derive"] }
dirs = "5.0.0"

[package.metadata.winres]
# This section defines the metadata that appears in the rodo.exe PE header.
OriginalFilename = "rodo.exe"
LegalCopyright = "© Rodo contributors. MIT licensed."
ProductName = "Rodo"
FileDescription = "Rodo is a simple todo list manager."